[gd_scene load_steps=10 format=3 uid="uid://cr1fdlmbknnko"]

[ext_resource type="Script" path="res://src/ui_parts/code_editor.gd" id="1_nffk0"]
[ext_resource type="FontFile" uid="uid://dc0w4sx0h0fui" path="res://visual/fonts/FontBold.ttf" id="2_hl52o"]
[ext_resource type="FontFile" uid="uid://dtb4wkus51hxs" path="res://visual/fonts/FontMono.ttf" id="2_p4nol"]
[ext_resource type="Texture2D" uid="uid://6ymbl3jqersp" path="res://visual/icons/Import.svg" id="4_cuhac"]
[ext_resource type="Texture2D" uid="uid://dthdjf4v2vlvg" path="res://visual/icons/CodeOptions.svg" id="4_sos04"]
[ext_resource type="Texture2D" uid="uid://d0uvwj0t44n6v" path="res://visual/icons/Export.svg" id="5_pgurh"]
[ext_resource type="Script" path="res://src/ui_elements/BetterTextEdit.gd" id="8_ser4i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q56qh"]
content_margin_left = 8.0
content_margin_top = 3.0
content_margin_right = 6.0
content_margin_bottom = 1.0
bg_color = Color(0.0975, 0.0975, 0.15, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_color = Color(0.152941, 0.152941, 0.2, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k0een"]
content_margin_left = 10.0
content_margin_right = 8.0
bg_color = Color(0.0975, 0.0975, 0.15, 1)
border_width_left = 2
border_width_top = 1
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.1875, 0.1875, 0.25, 1)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="CodeEditor" type="VBoxContainer"]
size_flags_vertical = 3
theme_override_constants/separation = 0
script = ExtResource("1_nffk0")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q56qh")

[node name="CodeButtons" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SizeButton" type="Button" parent="PanelContainer/CodeButtons"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"TranslucentButton"
theme_override_fonts/font = ExtResource("2_hl52o")

[node name="FileButton" type="Button" parent="PanelContainer/CodeButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"FlatButton"
text_overrun_behavior = 3

[node name="MetaActions" type="HBoxContainer" parent="PanelContainer/CodeButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10

[node name="OptionsButton" type="Button" parent="PanelContainer/CodeButtons/MetaActions"]
layout_mode = 2
tooltip_text = "More"
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"IconButton"
icon = ExtResource("4_sos04")
icon_alignment = 1

[node name="ImportButton" type="Button" parent="PanelContainer/CodeButtons/MetaActions"]
layout_mode = 2
tooltip_text = "Import"
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"IconButton"
icon = ExtResource("4_cuhac")

[node name="ExportButton" type="Button" parent="PanelContainer/CodeButtons/MetaActions"]
layout_mode = 2
tooltip_text = "Export"
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"IconButton"
icon = ExtResource("5_pgurh")

[node name="ScriptEditor" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = -2

[node name="SVGCodeEdit" type="TextEdit" parent="ScriptEditor"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("8_ser4i")

[node name="ErrorBar" type="PanelContainer" parent="ScriptEditor"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k0een")

[node name="Label" type="RichTextLabel" parent="ScriptEditor/ErrorBar"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_p4nol")
theme_override_font_sizes/normal_font_size = 14
fit_content = true

[connection signal="pressed" from="PanelContainer/CodeButtons/SizeButton" to="." method="_on_size_button_pressed"]
[connection signal="pressed" from="PanelContainer/CodeButtons/FileButton" to="." method="_on_file_button_pressed"]
[connection signal="pressed" from="PanelContainer/CodeButtons/MetaActions/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="caret_changed" from="ScriptEditor/SVGCodeEdit" to="ScriptEditor/SVGCodeEdit" method="redraw_caret"]
[connection signal="focus_entered" from="ScriptEditor/SVGCodeEdit" to="." method="_on_svg_code_edit_focus_entered"]
[connection signal="focus_exited" from="ScriptEditor/SVGCodeEdit" to="." method="_on_svg_code_edit_focus_exited"]
[connection signal="text_changed" from="ScriptEditor/SVGCodeEdit" to="." method="_on_svg_code_edit_text_changed"]
